welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:7: error: illegal start of simple expression
	} else if ((day == 0 || day == 6) && vacation == true )) {
                                                               ^